# secure_drop

./: .dockerignore  .env  .env.example  .gitignore  Caddyfile  DEPLOY.md  README.md  SECURITY.md  SERVER_DEPLOY.md  design.md  docker-compose.yml  implementation_plan.md  main.py  pyproject.toml  tech.md  verify_backend.py
backend/: Dockerfile  database.py  deps.py  main.py  models.py  redis_client.py  schemas.py
backend/routers/: auth.py  chats.py  users.py
front/: App.tsx  Dockerfile  README.md  constants.ts  index.css  index.html  index.tsx  metadata.json  nginx.conf  package.json  types.ts  vite.config.ts
front/components/: AuthView.tsx  ChatList.tsx  ChatRoom.tsx  LiquidUI.tsx  Profile.tsx
front/public/: service-worker.js
front/services/: api.ts  crypto.ts  mockService.ts
